--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PROJETO IFSP</title>
 
-    <!-- W3.CSS (apenas para estrutura) -->
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-    <!-- Font Awesome (único ícone) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Estilo W3.CSS e Font Awesome -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <style>
         body {
@@ -18,11 +16,7 @@
             margin: 0;
         }
 
-        #main {
-            margin-top: 100px;
-            padding: 16px;
-        }
-
+        /* NAVBAR */
         .navbar {
             display: flex;
             flex-wrap: wrap;
@@ -54,11 +48,37 @@
             background-color: #111;
         }
 
+        /* CONTEÚDO PRINCIPAL */
+        #main {
+            padding-top: 120px; /* Garante espaço abaixo da navbar fixa */
+            padding-left: 16px;
+            padding-right: 16px;
+        }
+
         @media (min-width: 601px) {
-            .navbar a {
-                border-bottom: none;
-                flex: none;
+            #main {
+                padding-top: 100px;
             }
+        }
+
+        /* Seções */
+        section {
+            padding: 60px 0;
+        }
+
+        section#home {
+            background-color: #f2f2f2;
+            text-align: center;
+        }
+
+        section#home h1 {
+            font-size: 36px;
+            margin-bottom: 16px;
+        }
+
+        section#home p {
+            font-size: 18px;
+            color: #555;
         }
     </style>
 </head>
@@ -75,7 +95,6 @@
         <a href="#tecnologias"><i class="fa fa-connectdevelop"></i>TECNOLOGIAS</a>
         <a href="#contato"><i class="fa fa-envelope"></i>CONTATO</a>
     </nav>
-    
     <div class="w3-padding-large" id="main">
         <header class="w3-container w3-padding-32 w3-center" id="home">
             <h1>
