--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             </h1>
         </header>
         <div class="w3-content w3-padding-32" id="sobre">
+          <main class="w3-content w3-padding-32" id="sobre">
             <h2 class="w3-text-green">Sobre o Curso</h2>
             <hr style="width:200px" class="w3-opacity">
             <ul class="w3-ul w3-hoverable w3-center w3-white">
@@ -134,6 +135,7 @@
                     <br> Reconhecido pelo MEC
                 </div>
             </div>
+          </main>      
         </div>
         <div class="w3-content" id="gradeC">
             <h2 class="w3-text-green">Grade Curricular</h2>
