--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         }
 
         #main {
-            margin-top: 200px;
+            margin-top: 100px;
         }
 
         .w3-row-padding img {
-            margin-bottom: 120px;
+            margin-bottom: 12px;
         }
 
         @media only screen and (max-width: 600px) {
@@ -62,7 +62,7 @@
     </style>
 </head>
 
-<body class="w3-white">
+<body class="w3-black">
 
     <nav class="w3-bar w3-black w3-top navbar-center">
         <a href="#home" class="w3-bar-item w3-button w3-hover-text-green w3-text-white">
