--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </style>
 </head>
 
-<body class="w3-black">
+<body class="w3-white">
 
     <nav class="w3-bar w3-black w3-top navbar-center">
         <a href="#home" class="w3-bar-item w3-button w3-hover-text-green w3-text-white">
