--- a/index.html
+++ b/index.html
@@ -22,19 +22,39 @@
             margin-top: 100px;
         }
 
+        .w3-bar-item.ativo {
+            color: #00ff00 !important;
+            transition: all 0.3s ease;
+            transform: scale(1.1);
+        }
+
         .w3-row-padding img {
             margin-bottom: 12px;
             width: 200px;
+            /* Default for larger screens */
             height: 180px;
             object-fit: cover;
             display: block;
-
         }
 
-        @media only screen and (max-width: 600px) {
-            #main {
-                margin-top: 120px;
-            }
+        .w3-content.w3-display-container {
+            display: flex;
+            flex-direction: column;
+            /* Stack slides by default */
+            align-items: center;
+            /* Center slides horizontally */
+            position: relative;
+            /* For absolute positioning of buttons */
+        }
+
+        .slide {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            /* Make each slide take full width on mobile */
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         .slide-content {
@@ -43,16 +63,23 @@
             justify-content: space-between;
             padding: 20px;
             gap: 20px;
+            width: 90%;
+            /* Limit content width for better readability */
+            max-width: 900px;
+            /* Maximum width for larger screens */
         }
 
+        /* --- MODIFIED SLIDES CLASS --- */
         .slides {
-            width: 100px;
-            height: 300px;
-            object-fit: cover;
+            width: 300px;
+            /* Maintain width */
+            height: 400px;
+            /* Increased height for larger screens */
+            object-fit: contain;
+            /* Ensure the entire image is visible */
             border-radius: 10px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
         }
-
 
         .text {
             flex: 1;
@@ -68,6 +95,143 @@
         .navbar-center a {
             text-align: center;
             padding: 10px 12px;
+        }
+
+        /* Grade Curricular Box Styling */
+        .grade-box {
+            background-color: white;
+            text-align: center;
+            opacity: 0.85;
+            transition: opacity 0.3s;
+            min-height: 500px;
+            /* Maintain consistent height */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            margin-bottom: 24px;
+            /* Add some space between stacked boxes on mobile */
+        }
+
+        .grade-box:hover {
+            opacity: 1;
+        }
+
+        .w3-button.w3-display-left,
+        .w3-button.w3-display-right {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .w3-button.w3-display-left {
+            left: 10px;
+        }
+
+        .w3-button.w3-display-right {
+            right: 10px;
+        }
+
+        /* --- Media Queries for Responsiveness --- */
+        @media only screen and (max-width: 992px) {
+
+            /* Adjustments for tablets and smaller desktops */
+            .slide-content {
+                flex-direction: column;
+                /* Stack image and text */
+                text-align: center;
+            }
+
+            .slide-content img {
+                width: 200px;
+                height: 200px;
+            }
+
+            .slide-content .w3-cell {
+                width: 100%;
+                /* Make text content take full width */
+                padding-left: 0;
+            }
+
+            /* --- MODIFIED SLIDES CLASS FOR TABLETS --- */
+            .slides {
+                width: 250px;
+                height: 350px;
+                object-fit: contain;
+            }
+        }
+
+        @media only screen and (max-width: 600px) {
+            #main {
+                margin-top: 120px;
+            }
+
+            /* Fix for "Sobre o Curso" section whitespace */
+            #sobre {
+                height: auto;
+                /* Allow content to dictate height */
+                min-height: unset;
+                /* Remove minimum height constraint */
+                margin-bottom: 0;
+                /* Remove bottom margin if not needed */
+            }
+
+
+            .w3-row-padding img {
+                width: 100%;
+                /* Make technology images responsive */
+                height: auto;
+                /* Maintain aspect ratio */
+            }
+
+            .slide {
+                padding: 10px;
+            }
+
+            .slide-content {
+                flex-direction: column;
+                /* Stack image and text */
+                padding: 10px;
+                gap: 10px;
+                width: 100%;
+            }
+
+            .slide-content img {
+                width: 150px;
+                height: 150px;
+                margin-bottom: 10px;
+            }
+
+            /* --- MODIFIED SLIDES CLASS FOR MOBILE --- */
+            .slides {
+                width: 150px;
+                height: 200px;
+                object-fit: contain;
+            }
+
+            .slide-content .w3-cell {
+                width: 100%;
+                padding-left: 0;
+                /* Ensure text is below image and takes full width */
+            }
+
+            .navbar-center a {
+                padding: 8px 6px;
+                /* Smaller padding for mobile nav links */
+                font-size: 10px;
+                /* Smaller font size for mobile nav links */
+            }
+
+            .grade-box {
+                min-height: auto;
+                /* Allow height to adjust based on content */
+            }
+
+            .w3-button.w3-display-left,
+            .w3-button.w3-display-right {
+                top: auto;
+                bottom: 10px;
+                transform: none;
+            }
         }
     </style>
 </head>
@@ -97,7 +261,49 @@
             <i class="fa fa-envelope w3-large"></i><br>CONTATO
         </a>
     </nav>
+    <script>
+        const navLinks = document.querySelectorAll('.w3-bar-item');
 
+
+        window.addEventListener('scroll', () => {
+            let currentSection = "";
+            const sections = document.querySelectorAll("section, header, div[id]");
+
+            sections.forEach(section => {
+                const sectionTop = section.offsetTop - 160;
+                const sectionHeight = section.offsetHeight;
+
+                if (window.scrollY >= sectionTop && window.scrollY < sectionTop + sectionHeight) {
+                    currentSection = section.id;
+                }
+            });
+
+            navLinks.forEach(link => {
+                link.classList.remove('ativo');
+                if (link.getAttribute('href') === '#' + currentSection) {
+                    link.classList.add('ativo');
+                }
+            });
+        });
+
+
+        navLinks.forEach(link => {
+            link.addEventListener('click', function (e) {
+                e.preventDefault();
+                const targetId = this.getAttribute('href').substring(1);
+                const targetSection = document.getElementById(targetId);
+
+                window.scrollTo({
+                    top: targetSection.offsetTop - 80,
+                    behavior: 'smooth'
+                });
+
+
+                navLinks.forEach(l => l.classList.remove('ativo'));
+                this.classList.add('ativo');
+            });
+        });
+    </script>
     <div class="w3-padding-large" id="main">
         <header class="w3-container w3-padding-32 w3-center" id="home">
             <br>
@@ -111,7 +317,7 @@
             </h1>
         </header>
     </div>
-    <div class="w3-content w3-padding-64" id="sobre" style="margin-bottom:64px; height: 100vh;">
+    <div class="w3-content w3-padding-64" id="sobre" style="margin-bottom:64px;">
         <h2 class="w3-text-green">Sobre o Curso</h2>
         <hr style="width:200px" class="w3-opacity">
         <ul class="w3-ul w3-hoverable w3-center w3-white">
@@ -148,27 +354,6 @@
     <div class="w3-content w3-padding-64" id="gradeC" style="margin-top:64px;">
         <h2 class="w3-text-green">Grade Curricular</h2>
         <hr style="width:200px" class="w3-opacity">
-
-        <style>
-            html {
-                scroll-behavior: smooth;
-            }
-
-            .grade-box {
-                background-color: white;
-                text-align: center;
-                opacity: 0.85;
-                transition: opacity 0.3s;
-                min-height: 500px;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-            }
-
-            .grade-box:hover {
-                opacity: 1;
-            }
-        </style>
 
 
         <div class="w3-row-padding w3-margin-bottom">
@@ -274,12 +459,12 @@
             </div>
         </div>
     </div>
-    <div class="w3-content w3-padding-64" id="Docentes">
+    <div class="w3-content w3-padding-64" id="Docentes" style="margin-top: 100px;">
         <h2 class="" style=" color: #006400;">Docentes</h2>
         <div class="w3-content w3-display-container">
             <div class="slide">
                 <div class="slide-content">
-                    <img class="slides" src="IMG/homem1.jpg" style="width: 350px;">
+                    <img class="slides" src="IMG/homem1.jpg" style="width: 600px;">
 
                     <div class="w3-container w3-cell" style="width:100%;">
                         <li class="w3-xlarge w3-padding-16" style="color: #006400;">Rodrigo Cardoso</li>
@@ -298,7 +483,7 @@
             </div>
             <div class="slide">
                 <div class="slide-content">
-                    <img class="slides" src="IMG/mulher1.jpg" style="width: 350px;">
+                    <img class="slides" src="IMG/mulher1.jpg" style="width: 600px;">
 
                     <div class="w3-container w3-cell" style="width:100%;">
                         <li class="w3-xlarge w3-padding-16" style="color: #006400;">Claudia Carvalho</li>
@@ -319,7 +504,7 @@
             </div>
             <div class="slide">
                 <div class="slide-content">
-                    <img class="slides" src="IMG/homem2.jpg" style="width: 350px;">
+                    <img class="slides" src="IMG/homem2.jpg" style="width: 600px;">
 
                     <div class="w3-container w3-cell" style="width:100%;">
                         <li class="w3-xlarge w3-padding-16 " style="color: #006400;">Ricardo Suarez</li>
@@ -341,7 +526,7 @@
             </div>
             <div class="slide">
                 <div class="slide-content">
-                    <img class="slides" src="IMG/mulher2.jpg" style="width: 350px;">
+                    <img class="slides" src="IMG/mulher2.jpg" style="width: 600px;">
 
                     <div class="w3-container w3-cell" style="width:100%;">
                         <li class="w3-xlarge w3-padding-16" style="color: #006400;">Andressa Marine</li>
@@ -358,8 +543,8 @@
                     </div>
                 </div>
             </div>
-            <button class="w3-button w3-green w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-            <button class="w3-button w3-green w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+            <button class="w3-button w3-green w3-display-left" onclick="plusDivs(-1)">❮</button>
+            <button class="w3-button w3-green w3-display-right" onclick="plusDivs(1)">❯</button>
         </div>
     </div>
 
@@ -384,7 +569,7 @@
 
     </script>
 
-    <div class="w3-padding-64 w3-content " id="mercado">
+    <div class="w3-padding-64 w3-content " id="mercado" style="margin-top: 150px;">
         <h2 class="w3-text-green">Mercado de Trabalho</h2>
         <hr style="width:200px" class="w3-opacity">
 
@@ -459,8 +644,10 @@
 
         <div class="w3-section">
             <p>
-                <i class="fa fa-map-marker"></i> São Paulo,
-                Brasil
+                <a href="https://maps.app.goo.gl/btHebsxacYfAnH3p9">
+                    <i class="fa fa-map-marker"></i> São Paulo,
+                    Brasil
+                </a>
             </p>
             <p>
                 <i class="fa fa-phone"></i> Telefone: 13
@@ -497,9 +684,9 @@
             <a href="#home" class="w3-bar-item w3-button" style="width:25% ">HOME</a>
             <a href="#sobre" class="w3-bar-item w3-button" style="width:25% ">SOBRE</a>
             <a href="#tecnologias" class="w3-bar-item w3-button" style="width:27%
-                            ">TECNOLOGIAS</a>
+                                ">TECNOLOGIAS</a>
             <a href="#contato" class="w3-bar-item w3-button" style="width:23%
-                            ">CONTATO</a>
+                                ">CONTATO</a>
         </nav>
     </div>
     <footer class="w3-content w3-padding-64 w3-text-green w3-xlarge w3-center">
